--- a/authors.html
+++ b/authors.html
@@ -47,7 +47,7 @@
       <p></p>
 
       <p>Last F (2025).
-<em>gitspero: What the Package Does (One Line, Title Case)</em>.
+<em>gitspero: Package de find de Cours de Github et R avancé(One Line, Title Case)</em>.
 R package version 0.0.0.9000, <a href="https://fsisnio.github.io/gitspero/">https://fsisnio.github.io/gitspero/</a>.
 </p>
       <pre>@Manual{,
