--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="container">
         <header>
             <h1>Projet gitspero</h1>
+            <p><strong>Auteur :</strong> Spéro FALADE, Master ECAP, Université de Nantes</p>
         </header>
         <nav>
             <a href="index.html">Accueil</a>
@@ -67,8 +68,27 @@
         </nav>
         <main>
             <h2>Bienvenue sur le Projet gitspero</h2>
-            <p>Ce projet est un package R avancé permettant de générer des rapports d'analyse basés sur des données régionales. Il a été réalisé dans le cadre du cours de R avancé et de Github.</p>
-            <p>Explorez les différentes sections pour en savoir plus sur le package, l'auteur, et les documents de vignette et de documentation.</p>
+            <p>Ce projet est un package R avancé permettant de générer des rapports d'analyse basés sur des données régionales. Il inclut des fonctionnalités de création de rapports automatisés, une vignette explicative et une documentation complète avec pkgdown.</p>
+            <h3>Fonctionnalités</h3>
+            <ul>
+                <li><strong>calcul_distribution_age :</strong> Calcule la distribution des âges dans un dataset.</li>
+                <li><strong>compter_nombre_d_adjoints :</strong> Compte le nombre d'adjoints dans un dataset.</li>
+                <li><strong>compter_nombre_d_elus :</strong> Retourne le nombre total d'élus.</li>
+                <li><strong>trouver_l_elu_le_plus_age :</strong> Trouve l'élu(e) le plus âgé(e).</li>
+                <li><strong>summary.commune :</strong> Génère un résumé des statistiques d'une commune.</li>
+                <li><strong>summary.departement :</strong> Génère un résumé des statistiques d'un département.</li>
+                <li><strong>plot.commune :</strong> Génère un graphique des catégories socio-professionnelles des élus.</li>
+                <li><strong>plot.departement :</strong> Génère un graphique des 10 professions les plus fréquentes.</li>
+            </ul>
+            <h3>Développement</h3>
+            <p>Le package a été développé en suivant les étapes suivantes :</p>
+            <ol>
+                <li>Initialisation du projet avec Git et GitHub.</li>
+                <li>Ajout des fonctionnalités principales et documentation.</li>
+                <li>Création d'une vignette explicative.</li>
+                <li>Configuration de la documentation avec pkgdown.</li>
+                <li>Tests et validation du package.</li>
+            </ol>
         </main>
         <footer>
             <p>&copy; 2025 Spéro FALADE, Université de Nantes</p>
