--- a/authors.html
+++ b/authors.html
@@ -57,8 +57,8 @@
         </div>
         <div class="contact-info">
             <h3>Contact</h3>
-            <p>Email: <a href="mailto:first.last@example.com">first.last@example.com</a></p>
-            <p>GitHub: <a href="https://github.com/utilisateur" target="_blank">https://github.com/utilisateur</a></p>
+            <p>Email: <a href="mailto:first.last@example.com">faladespero1@gmail.com/a></p>
+            <p>GitHub: <a href="https://github.com/utilisateur" target="_blank">https://github.com/fsisnio</a></p>
         </div>
     </div>
 </body>
