--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </header>
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="author.html">Auteur</a>
+            <a href="authors.html">Auteur</a>
             <a href="vignette.html">Vignette</a>
             <a href="documentation.html">Documentation</a>
         </nav>
